sudojoss/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: sudojoss
            servicePort: 80
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - sudojoss.com
    - www.sudojoss.com
